# kafkac

./: .coveragerc  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: package.yml  testing.yml
benchmarks/: README.md
docker/: docker-compose.yml
docs/: index.md
search/: search_index.json
src/kafkac/: __init__.py  consumer.py  debug.py  dlq.py  exception.py  filter.py  grouping.py  handler.py  headers.py  message_util.py  result.py  worker.py
src/kafkac/filters/: __init__.py  filter.py
src/kafkac/models/: __init__.py  batch.py  grouper.py
src/kafkac/retry/: __init__.py  cfg.py  router.py
src/tests/: conftest.py  test_placeholder.py
src/tests/integration/: test_consumer.py
src/tests/unit/: test_consumer.py
src/tests/unit/filters/: test_filtering.py
tests/: conftest.py  utils.py
tests/integration/: test_consumer.py
tests/unit/: test_batch.py  test_consumer.py  test_debug.py
tests/unit/filters/: test_filtering.py
tools/: evaluate_consumer_settings  update_dependencies
