[project]
name = "kafkac"
version = "0.1.0"
description = "An improved kafka consumer"
readme = "README.md"
authors = [
    { name = "symonk", email = "jackofspaces@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.12.0",
    "pydantic>=2.12.2",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0",
    "testcontainers>=4.13.2",
]
